--- a/app/src/main/res/layout/activity_trending_main.xml
+++ b/app/src/main/res/layout/activity_trending_main.xml
@@ -2,6 +2,16 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="viewModel"
+            type="com.example.trending_app.viewmodel.TrendingViewModel" />
+
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_main_view"
         android:layout_width="match_parent"
@@ -13,7 +23,6 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/white"
-            android:elevation="0dp"
             app:contentInsetStartWithNavigation="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:title="@string/trending_text"
@@ -31,18 +40,26 @@
             app:layout_constraintEnd_toEndOf="@id/toolbar"
             app:layout_constraintTop_toTopOf="@id/toolbar" />
 
+        <View
+            android:id="@+id/v_separator"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/grey"
+            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_data_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar">
+            app:layout_constraintTop_toBottomOf="@id/v_separator">
 
             <com.facebook.shimmer.ShimmerFrameLayout
                 android:id="@+id/shimmerLayout"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:visibility="@{viewModel.loading}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -96,74 +113,84 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_empty_view"
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/nsv_scroll"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:visibility="gone"
-            android:background="@color/grey"
+            android:fillViewport="true"
+            android:visibility="@{viewModel.error}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar">
+            app:layout_constraintTop_toBottomOf="@id/v_separator">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/iv_no_internet"
-                android:layout_width="230dp"
-                android:layout_height="230dp"
-                android:src="@drawable/ic_nointernet_connection"
-                app:layout_constraintBottom_toTopOf="@id/btn_retry"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_empty_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/grey">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_something_wrong"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:gravity="center"
-                android:text="@string/something_wrong_text"
-                android:textColor="@color/extream_grey"
-                android:textSize="22sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_no_internet" />
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/iv_no_internet"
+                    android:layout_width="230dp"
+                    android:layout_height="230dp"
+                    android:src="@drawable/ic_nointernet_connection"
+                    app:layout_constraintBottom_toTopOf="@id/btn_retry"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_no_internet"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:text="@string/internet_connection_text"
-                android:textColor="@color/dark_grey"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_something_wrong" />
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_something_wrong"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:gravity="center"
+                    android:text="@string/something_wrong_text"
+                    android:textColor="@color/extream_grey"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/iv_no_internet" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_retry"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="10dp"
-                android:backgroundTint="@color/white"
-                android:elevation="0dp"
-                android:paddingVertical="15dp"
-                android:text="@string/retry_text"
-                android:textColor="@color/btn_green"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:cornerRadius="6dp"
-                app:elevation="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:strokeColor="@color/btn_green"
-                app:strokeWidth="1dp" />
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_no_internet"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="@string/internet_connection_text"
+                    android:textColor="@color/dark_grey"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_something_wrong" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_retry"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginBottom="10dp"
+                    android:backgroundTint="@color/white"
+                    android:elevation="0dp"
+                    android:paddingVertical="15dp"
+                    android:text="@string/retry_text"
+                    android:textColor="@color/btn_green"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:cornerRadius="6dp"
+                    app:elevation="0dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_no_internet"
+                    app:layout_constraintVertical_bias="1"
+                    app:strokeColor="@color/btn_green"
+                    app:strokeWidth="1dp" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.core.widget.NestedScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
