--- a/app/src/main/res/layout/item_trending_list.xml
+++ b/app/src/main/res/layout/item_trending_list.xml
@@ -9,7 +9,11 @@
 
         <variable
             name="trendingData"
-            type="com.example.tiles_app.model.TrendingData" />
+            type="com.example.trending_app.model.TrendingData" />
+
+        <variable
+            name="isExpand"
+            type="Boolean" />
 
     </data>
 
@@ -25,7 +29,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="25dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +39,8 @@
                 android:id="@+id/iv_avatar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="fitXY" />
+                android:scaleType="fitXY"
+                app:image_url="@{trendingData.avatar}"/>
 
         </androidx.cardview.widget.CardView>
 
@@ -57,7 +62,6 @@
             android:id="@+id/tv_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="@{trendingData.name}"
             android:textColor="@color/dark_grey"
             android:textSize="18sp"
@@ -76,7 +80,7 @@
             android:text="@{trendingData.description}"
             android:textColor="@color/dark_grey"
             android:textSize="14sp"
-            android:visibility="gone"
+            android:visibility="@{isExpand ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="@id/tv_author"
             app:layout_constraintStart_toStartOf="@id/tv_author"
             app:layout_constraintTop_toBottomOf="@id/tv_name"
@@ -84,11 +88,11 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_color"
-            android:layout_width="8dp"
-            android:layout_height="8dp"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
             android:src="@drawable/ic_dot"
-            app:tint="@{trendingData.languageColor}"
-            android:visibility="gone"
+            android:visibility="@{isExpand ? View.VISIBLE : View.GONE}"
+            app:image_tint="@{trendingData.languageColor}"
             app:layout_constraintBottom_toBottomOf="@id/tv_language"
             app:layout_constraintStart_toStartOf="@id/tv_author"
             app:layout_constraintTop_toTopOf="@id/tv_language" />
@@ -99,9 +103,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="12dp"
-            android:visibility="gone"
             android:text="@{trendingData.language}"
             android:textColor="@color/dark_grey"
+            android:visibility="@{isExpand ? View.VISIBLE : View.GONE}"
             android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@id/iv_star"
             app:layout_constraintStart_toEndOf="@id/iv_color"
@@ -110,10 +114,10 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_star"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:layout_marginStart="30dp"
-            android:visibility="gone"
+            android:visibility="@{isExpand ? View.VISIBLE : View.GONE}"
             android:src="@drawable/ic_star"
             app:layout_constraintBottom_toBottomOf="@id/tv_rating"
             app:layout_constraintStart_toEndOf="@id/tv_language"
@@ -123,10 +127,10 @@
             android:id="@+id/tv_rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="12dp"
             android:text="@{trendingData.stars}"
-            android:visibility="gone"
+            android:visibility="@{isExpand ? View.VISIBLE : View.GONE}"
             android:textColor="@color/dark_grey"
             android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@id/iv_forks"
@@ -136,10 +140,10 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_forks"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:visibility="gone"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:layout_marginStart="30dp"
+            android:visibility="@{isExpand ? View.VISIBLE : View.GONE}"
             android:src="@drawable/ic_forks"
             app:layout_constraintBottom_toBottomOf="@id/tv_forks"
             app:layout_constraintStart_toEndOf="@id/tv_rating"
@@ -149,11 +153,11 @@
             android:id="@+id/tv_forks"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="12dp"
+            android:visibility="@{isExpand ? View.VISIBLE : View.GONE}"
             android:text="@{trendingData.forks}"
             android:textColor="@color/dark_grey"
-            android:visibility="gone"
             android:textSize="14sp"
             android:layout_marginEnd="16dp"
             app:layout_constraintStart_toEndOf="@id/iv_forks"
